# understand

./: .gitignore  README.md  all.md  extract_content.py  posts.json  pyproject.toml
content/: 100_year_artifact_spirits.md  1945.md  2017_books.md  20_years_old.md  30_year_prediction.md  3_books.md  3books.md  5p9b_news.md  5point9billion.md  README.md  a_bunch_of_texts.md  a_general_theory_of_magic.md  a_month_long_conference.md  a_new_question_to.md  a_new_tv_channel.md  act.md  actioncat.md  adams.md  adapting.md  adaptive_design.md  adaptive_ui.md  advertising.md  after_i_die.md  agenda.md  agents.md  ai-landscape.md  ai-pathfinding.md  ai_collaboration.md  ai_overhang.md  ai_revolution.md  air_quotes_product.md  air_travel.md  airpods.md  algorithms.md  amazon.md  amazon_dash.md  ancient_robots.md  anf.md  animals.md  (+638 more)
content-html/: 100_year_artifact_spirits.html  1945.html  2017_books.html  20_years_old.html  30_year_prediction.html  3_books.html  3books.html  5p9b_news.html  5point9billion.html  README.html  a_bunch_of_texts.html  a_general_theory_of_magic.html  a_month_long_conference.html  a_new_question_to.html  a_new_tv_channel.html  act.html  actioncat.html  adams.html  adapting.html  adaptive_design.html  adaptive_ui.html  advertising.html  after_i_die.html  agenda.html  agents.html  ai-landscape.html  ai-pathfinding.html  ai_collaboration.html  ai_overhang.html  ai_revolution.html  air_quotes_product.html  air_travel.html  airpods.html  algorithms.html  amazon.html  amazon_dash.html  ancient_robots.html  anf.html  animals.html  animals_and_not_animals.html  (+638 more)
